Fixed clipped content in landscape mode

--- a/assets/css/components/custom.css
+++ b/assets/css/components/custom.css
@@ -389,6 +389,10 @@ h1 a, h2 a, h3 a, h4 a {
         font-size: 1.25rem;
     }
 
+    .site-head-open .site-head-container {
+        margin-bottom: 4px;
+    }
+
     .page-head {
         max-width: 100%;
         padding: 6vw 0;
